# Mana

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  Mana.ebnf  Mana.sln  README.md  compile_commands.json
Lang/Samples/: 00-building-blocks.mn  01-hello-world.mn
Libs/Catch2/lib/: Catch2Main.lib  Catch2Maind.lib
Libs/spdlog/: spdlog.vcxproj  spdlog.vcxproj.filters
Salem/: Salem.vcxproj  Salem.vcxproj.filters
Salem/Include/Lox/: Chunk.h  (+2 more)
Salem/ManaExamples/: BasicLexing.mn
SalemTest/: SalemTest.vcxproj  SalemTest.vcxproj.filters
SalemTest/Tests/: Test_Lexing.cpp  common.hpp  test_lexing.cpp  test_parsing.cpp
TestingSamples/Lexing/: Operators.mn
assets/: Info.md
assets/examples/: hello.mn
assets/samples/: .5-conditionals.mn.kate-swp  4-arrays.mn  5-conditionals.mn  6-data.mn  7-assignment.mn  8-loop.mn  Info.md  annotations.mn  assignments.mn  expr-a.mn  expr-b.mn  expr-c.mn  fibonacci.mn  functions.mn  hello-world.mn  skip.mn
assets/samples-old/: annotations.mn  conditionals.mn  data.mn  functions.mn  loop-post.mn
circe/: CMakeLists.txt
circe/src/: bytecode-generator.cpp  main.cpp  register.cpp
design/: design-questions.md  enumerations.html
design/Lang/: Mana.ebnf
design/lang/: Mana.ebnf  mana.ebnf.backup2  questions.md
design/site-lib/: metadata.json  rss.xml  search-index.json
extensions/mana/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
grimoire/: README.md  language-configuration.json  package.json
grimoire/syntaxes/: mana.tmLanguage.json
hex/: CMakeLists.txt
hex/include/hex/: hex.hpp
hex/include/hex/core/: disassembly.hpp  logger.hpp
hex/src/: hex.cpp  main.cpp
hex/src/core/: disassembly.cpp
hexe/: CMakeLists.txt
hexe/include/hexe/: bytecode.hpp  value.hpp
hexe/include/mana/: literals.hpp
hexe/src/hexe/: bytecode.cpp  logger.cpp
hexec/: CMakeLists.txt
hexec/include/hexec/: bytecode.hpp  logger.hpp  opcode.hpp  value.hpp
hexec/src/hexec/: bytecode.cpp  logger.cpp  value.cpp
mana/: Info.md
mana-core/: CMakeLists.txt
modules/circe/: CMakeLists.txt
modules/circe/include/circe/: bytecode-generator.hpp  register.hpp
modules/circe/include/circe/core/: cli.hpp
modules/circe/src/: bytecode-generator.cpp  main.cpp  register.cpp
modules/circe/src/circe/: bytecode-generator.cpp  main.cpp
modules/circe/src/core/: cli.cpp
modules/circe/tests/: CMakeLists.txt  output.cpp
modules/hex/: CMakeLists.txt
modules/mana-core/: CMakeLists.txt
modules/mana-core/include/hexe/: bytecode.hpp  logger.hpp  opcode.hpp  primitive-type.hpp  value.hpp
modules/mana-core/include/mana/: exit-codes.hpp  literals.hpp  logger.hpp
modules/mana-core/include/mana/vm/: bytecode.hpp  hexe.hpp  opcode.hpp  value.hpp
modules/mana-core/src/hexe/: bytecode.cpp  value.cpp
modules/mana-core/src/vm/: bytecode.cpp  hexe.cpp  value.cpp
modules/mana-core/tests/tests/: slices.cpp  values.cpp
modules/sigil/: CMakeLists.txt
projects/circe/: CMakeLists.txt
projects/circe/tests/: CMakeLists.txt
projects/circe/tests/tests/: serialization.cpp
projects/hex/: CMakeLists.txt
projects/hex/include/hex/: chunk.hpp
projects/hex/include/hex/ast/: lexer.hpp  parse_tree.hpp  parser.hpp  syntax_tree.hpp  token.hpp
projects/hex/include/hex/core/: cli.hpp  disassembly.hpp  exit_codes.hpp  logger.hpp  type_aliases.hpp
projects/hex/include/hex/vm/: slice.hpp  stack.hpp  virtual-machine.hpp
projects/hex/include/salem/core/: logger.hpp
projects/hex/src/hex/: chunk.cpp  main.cpp  slice.cpp
projects/hex/src/hex/ast/: lexer.cpp  parse_tree.cpp  parser.cpp
projects/hex/src/hex/core/: cli.cpp  disassembly.cpp  logger.cpp
projects/hex/src/hex/vm/: slice.cpp  stack.cpp  virtual-machine.cpp
projects/hex/src/salem/: main.cpp
projects/hex/tests/: CMakeLists.txt
projects/hex/tests/assets/samples/lexing/keywords/: control_flow.mn  declarations.mn
projects/hex/tests/assets/samples/parsing/: atoms.mn  expressions.mn  hello-world.mn
projects/hex/tests/tests/: common.hpp  lexing.cpp  parsing.cpp
projects/mana-core/: CMakeLists.txt
projects/mana-core/tests/: CMakeLists.txt
projects/mana-core/tests/tests/: slices.cpp  values.cpp
projects/salem/: CMakeLists.txt
projects/salem/include/salem/core/: cli.hpp
projects/salem/src/salem/: main.cpp
projects/salem/tests/: CMakeLists.txt
projects/salem/tests/tests/: lexing.cpp
projects/sigil/: CMakeLists.txt
projects/sigil/include/sigil/ast/: ast.hpp  keywords.hpp  lexer.hpp  nodes.hpp  parse-tree.hpp  parse_tree.hpp  parser.hpp  rule.hpp  source-file.hpp  syntax-tree.hpp  token.hpp  visitor.hpp
projects/sigil/include/sigil/core/: concepts.hpp  exit_codes.hpp  logger.hpp  type_aliases.hpp
projects/sigil/include/sigil/error/: error-code.hpp  error-sink.hpp  error.hpp
projects/sigil/src/sigil/ast/: ast.cpp  lexer.cpp  nodes.cpp  parse-tree.cpp  parse_tree.cpp  parser.cpp  source-file.cpp  syntax-tree.cpp
projects/sigil/src/sigil/core/: logger.cpp
projects/sigil/src/sigil/error/: error-sink.cpp  error.cpp
projects/sigil/tests/: CMakeLists.txt
projects/sigil/tests/assets/control/ptree/: arrays.ptree  expressions.pt  expressions.ptree
projects/sigil/tests/assets/samples/: lex-tests.mn  lexing.mn
projects/sigil/tests/assets/samples/lexing/: benchmark.mn  lexing.mn  operators.mn
projects/sigil/tests/assets/samples/lexing/keywords/: control_flow.mn  datatypes.mn
projects/sigil/tests/assets/samples/parsing/: arrays.mn  expressions.mn  if.mn
projects/sigil/tests/tests/: ast.cpp  common.hpp  lexing.cpp  parsing.cpp  ptree.cpp  tokenization.cpp
projects/sigil/tests/tests/headers/: common.hpp
projects/tests/: CMakeLists.txt
salem/: CMakeLists.txt
sigil/: CMakeLists.txt
sigil/include/sigil/ast/: rule.hpp  syntax-tree.hpp  token.hpp  visitor.hpp
sigil/src/ast/: semantic-analyzer.cpp  syntax-tree.cpp
sigil/tests/: CMakeLists.txt
sigil/tests/assets/control/ptree/: expressions.ptree
sigil/tests/assets/samples/parsing/: hello-world.mn  if.mn
tests/: CMakeLists.txt
tests/unit/: values.cpp
(+195 files in other folders)
